--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,24 @@ matrix:
     script:
     - bash -e -- cudalucas.sh ANONYMOUS
     - cd cudalucas && cppcheck --enable=all *.cu *.c *.h
+  - name: "CUDALucas"
+    arch: arm64-graviton2
+    virt: lxd
+    group: edge
+    install:
+    - sudo apt-get -yqq update
+    - sudo apt-get -yqq install cppcheck
+    before_script:
+    - sed -i '/^GPU=/,/^fi/ s/^/# /' cudalucas.sh
+    - sed -i '/^if ! COMPUTE=/,/^fi/ s/^/# /' cudalucas.sh
+    - sed -i 's/\/$COMPUTE/\/--generate-code arch=compute_35,code=sm_35 --generate-code arch=compute_50,code=sm_50/' cudalucas.sh
+    - sed -i '/^\.\/CUDALucas / s/^/# /' cudalucas.sh
+    - sed -i '/^nohup / s/^/# /' cudalucas.sh
+    - sed -i '/^python3 / s/^/# /' cudalucas.sh
+    - sed -i '/^crontab / s/^/# /' cudalucas.sh
+    script:
+    - bash -e -- cudalucas.sh ANONYMOUS
+    - cd cudalucas && cppcheck --enable=all *.cu *.c *.h
   - name: "Mlucas (Intel)"
     arch: amd64
     virt: vm
